# poly2tri

./: .gitignore  CMakeLists.txt  CMakeSettings.json  CsharpCallC.sln  Program.cs  libtcmalloc_minimal.lib  pcdReader.cpp  pcdReader.h  position.json  position.py
CsharpCallC/: CsharpCallC.csproj  Program.cs
CsharpCallC/Properties/: AssemblyInfo.cs
poly2tri/: qtgui.cc
poly2tri/common/: utils.h
poly2tri/sweep/: cdt.cc  cdt.h  my_ear_cut.cc  my_ear_cut.h  sweep_context.h
testbed/: jsonfileopt.cpp  jsonfileopt.h  pcl.cc
